# solostormcloneMVP

./: .gitignore  README.md  requirements.txt
backend/: pyproject.toml  run_server.py  run_tests.py
backend/app/: flask_app.py  main.py
backend/app/api/: runs.py  schemas.py
backend/app/models/: raw.py  telemetry.py
backend/app/services/: canonicalizer.py  csv_parser.py  repository.py
backend/app/utils/: coordinates.py  sample_data.py
backend/data/runs/: run_001_figure8_fast.csv  run_002_figure8_tight.csv  run_003_slalom_8cone.csv  run_004_slalom_12cone.csv  run_sim_circle.csv  run_sim_figure8.csv
backend/tests/: test_api.py  test_coordinates.py  test_csv_parser.py
frontend/: README.md  index.html  package-lock.json  package.json
frontend/src/: App.tsx  index.css  main.tsx
frontend/src/components/: CourseEditor.tsx  CourseEditorPage.tsx  PlaybackControls.tsx  PlaybackTelemetryInspector.tsx  RunList.tsx  SectorInspector.tsx  TrackCanvas.tsx  VisualizationPanel.tsx
frontend/src/hooks/: course.ts  index.ts
frontend/src/services/: api.ts
frontend/src/types/: course.ts  index.ts
frontend/src/utils/: colors.ts
scripts/: start_backend.ps1
